--- a/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
@@ -43,7 +43,7 @@
 					Grid.ColumnSpan="2"
 					Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}">
 
-			<Button Content="{x:Static root:PluginResources.Auth_Cloud_SSO}"
+			<Button Content="{x:Static root:PluginResources.Auth_SSO}"
 					Style="{StaticResource Sdl.Button.PrimaryStyle}"
 					Command="{Binding SelectAuthenticationTypeCommand}"
 					CommandParameter="{x:Static root:AuthenticationType.CloudSSO}"
@@ -57,10 +57,10 @@
 					Cursor="Hand"
 					Width="200"
 					Margin="0 8" />
-			<Button Content="{x:Static root:PluginResources.Auth_Cloud_Secrets}"
+			<Button Content="{x:Static root:PluginResources.Auth_Cloud_APICredentials}"
 					Style="{StaticResource Sdl.Button.PrimaryStyle}"
 					Command="{Binding SelectAuthenticationTypeCommand}"
-					CommandParameter="{x:Static root:AuthenticationType.CloudSecret}"
+					CommandParameter="{x:Static root:AuthenticationType.CloudAPI}"
 					Cursor="Hand"
 					Width="200"
 					Margin="0 8" />
@@ -96,10 +96,31 @@
 							 Padding="0"/>
 			</StackPanel>
 
+			<!-- SSO Connection code -->
+			<TextBlock Grid.Row="0"
+					   Grid.Column="0"
+					   Text="{x:Static root:PluginResources.Auth_Cloud_SSO_ConnectionCode}"
+					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
+					   Visibility="{Binding IsSSOSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					   VerticalAlignment="Center"
+					   Focusable="True" />
+
+			<TextBox Grid.Row="0"
+					 Grid.ColumnSpan="2"
+					 Text="{Binding ConnectionCode, UpdateSourceTrigger=PropertyChanged}"
+					 Style="{StaticResource WatermarkTextBox}"
+					 controls:TextBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_SSO_ConnectionCode}"
+					 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
+					 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=ConnectionCode, Type={x:Type viewModel:CloudCredentialsViewModel}}"
+					 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
+					 Visibility="{Binding IsSSOSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					 Margin="0 8" />
+			<!-- SSO Connection code -->
+
 			<!-- User ID -->
 			<TextBlock Grid.Row="1"
 					   Grid.Column="0"
-					   Text="{x:Static root:PluginResources.Auth_Cloud_ClientID}"
+					   Text="{x:Static root:PluginResources.Auth_Cloud_Credentials_Username}"
 					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
 					   Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 					   VerticalAlignment="Center"
@@ -107,11 +128,11 @@
 
 			<TextBox Grid.Row="1"
 					 Grid.ColumnSpan="2"
-					 Text="{Binding UserId, UpdateSourceTrigger=PropertyChanged}"
+					 Text="{Binding UserName, UpdateSourceTrigger=PropertyChanged}"
 					 Style="{StaticResource WatermarkTextBox}"
-					 controls:TextBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_ClientID}"
+					 controls:TextBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_Credentials_Username}"
 					 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
-					 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=UserId, Type={x:Type viewModel:CloudCredentialsViewModel}}"
+					 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=UserName, Type={x:Type viewModel:CloudCredentialsViewModel}}"
 					 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
 					 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 					 Margin="0 8" />
@@ -120,7 +141,7 @@
 			<!-- Password -->
 			<TextBlock Grid.Row="2"
 					   Grid.Column="0"
-					   Text="{x:Static root:PluginResources.Auth_Cloud_UserPw}"
+					   Text="{x:Static root:PluginResources.Auth_Cloud_Credentials_Userpw}"
 					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
 					   Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 					   VerticalAlignment="Center"
@@ -131,14 +152,14 @@
 						 x:Name="userPwBox"
 						 PasswordChanged="UserPassword_Changed"
 						 Style="{StaticResource WatermarkPasswordBox}"
-						 controls:PasswordBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_UserPw}"
+						 controls:PasswordBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_Credentials_Userpw}"
 						 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}" />
 			<!-- Password -->
 
 			<!-- Client ID -->
 			<TextBlock Grid.Row="3"
 					   Grid.Column="0"
-					   Text="{x:Static root:PluginResources.Auth_Cloud_ClientID}"
+					   Text="{x:Static root:PluginResources.Auth_Cloud_APICredentials_ClientID}"
 					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
 					   Visibility="{Binding IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 					   VerticalAlignment="Center"
@@ -148,7 +169,7 @@
 					 Grid.ColumnSpan="2"
 					 Text="{Binding ClientId, UpdateSourceTrigger=PropertyChanged}"
 					 Style="{StaticResource WatermarkTextBox}"
-					 controls:TextBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_ClientID}"
+					 controls:TextBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_APICredentials_ClientID}"
 					 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
 					 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=ClientId, Type={x:Type viewModel:CloudCredentialsViewModel}}"
 					 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
@@ -159,7 +180,7 @@
 			<!-- Client Secret -->
 			<TextBlock Grid.Row="4"
 					   Grid.Column="0"
-					   Text="{x:Static root:PluginResources.Auth_Cloud_ClientSecret}"
+					   Text="{x:Static root:PluginResources.Auth_Cloud_APICredentials_ClientSecret}"
 					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
 					   Visibility="{Binding IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 					   VerticalAlignment="Center"
@@ -170,7 +191,7 @@
 						 x:Name="clientSecretBox"
 						 PasswordChanged="ClientSecret_Changed"
 						 Style="{StaticResource WatermarkPasswordBox}"
-						 controls:PasswordBoxWatermarkHelper.WatermarkText="Client Secret"
+						 controls:PasswordBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_APICredentials_ClientSecret}"
 						 Visibility="{Binding IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}" />
 			<!-- Client Secret -->
 		</Grid>
