--- a/LanguageWeaverProvider/View/CredentialsMainView.xaml
+++ b/LanguageWeaverProvider/View/CredentialsMainView.xaml
@@ -88,7 +88,7 @@
 							 HorizontalAlignment="Center" />
 
 					<StackPanel Grid.Row="0"
-								Visibility="{Binding ProviderView.AuthenticationType, Converter={StaticResource EnumToVisibility}, ConverterParameter={x:Static root:AuthenticationType.CloudSecret}}">
+								Visibility="{Binding ProviderView.AuthenticationType, Converter={StaticResource EnumToVisibility}, ConverterParameter={x:Static root:AuthenticationType.CloudAPI}}">
 						<TextBox Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
 								 Cursor="Arrow"
 								 Text="You've chosen Client Secret Authentication. Please provide the generated client secret for access."
@@ -97,10 +97,11 @@
 						<Button Style="{StaticResource Sdl.Button.HyperLinkStyle}"
 								Command="{Binding OpenHyperlinkCommand}"
 								CommandParameter="{x:Static root:Constants.LanguageWeaverEUPortal}"
+								HorizontalAlignment="Left"
 								Cursor="Hand"
 								Margin="16 8 16 0">
 							<Button.Content>
-								<TextBlock Text="Please note that only administrators can retrieve the Client ID and Client Secret from the Language Weaver website."
+								<TextBlock Text="Please note that only administrators can retrieve the Client ID and Client Secret."
 										   TextWrapping="Wrap" />
 							</Button.Content>
 						</Button>
