--- a/LanguageWeaverProvider/View/Edge/EdgeCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Edge/EdgeCredentialsView.xaml
@@ -35,14 +35,10 @@
 			<RowDefinition Height="*" />
 			<RowDefinition Height="*" />
 			<RowDefinition Height="*" />
-			<RowDefinition Height="*" />
-			<RowDefinition Height="*" />
-			<RowDefinition Height="*" />
-			<RowDefinition Height="*" />
 		</Grid.RowDefinitions>
 
 		<Button Grid.Row="0"
-				Content="Single sign-on"
+				Content="{x:Static root:PluginResources.Auth_SSO}"
 				Style="{StaticResource Sdl.Button.PrimaryStyle}"
 				Command="{Binding SelectAuthenticationTypeCommand}"
 				CommandParameter="{x:Static root:AuthenticationType.EdgeSSO}"
@@ -52,7 +48,7 @@
 				Margin="0 8" />
 
 		<Button Grid.Row="1"
-				Content="User credentials"
+				Content="{x:Static root:PluginResources.Auth_Edge_UserCredentials}"
 				Style="{StaticResource Sdl.Button.PrimaryStyle}"
 				Command="{Binding SelectAuthenticationTypeCommand}"
 				CommandParameter="{x:Static root:AuthenticationType.EdgeCredentials}"
@@ -62,7 +58,7 @@
 				Margin="0 8" />
 
 		<Button Grid.Row="2"
-				Content="API Key"
+				Content="{x:Static root:PluginResources.Auth_Edge_APIKey}"
 				Style="{StaticResource Sdl.Button.PrimaryStyle}"
 				Command="{Binding SelectAuthenticationTypeCommand}"
 				CommandParameter="{x:Static root:AuthenticationType.EdgeApiKey}"
@@ -71,11 +67,11 @@
 				Width="200"
 				Margin="0 8" />
 
-		<TextBox Grid.Row="0"
+		<TextBox Grid.Row="3"
 				 Grid.Column="1"
 				 Text="{Binding Host, UpdateSourceTrigger=PropertyChanged}"
 				 Style="{StaticResource WatermarkTextBox}"
-				 controls:TextBoxWatermarkHelper.WatermarkText="Host: https://my-domain.com:8001/"
+				 controls:TextBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Edge_Host}"
 				 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
 				 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=Host, Type={x:Type viewModel:EdgeCredentialsViewModel}}"
 				 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
@@ -83,11 +79,11 @@
 				 Margin="24 8"
 				 VerticalAlignment="Top" />
 
-		<TextBox Grid.Row="2"
+		<TextBox Grid.Row="4"
 				 Grid.Column="1"
 				 Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
 				 Style="{StaticResource WatermarkTextBox}"
-				 controls:TextBoxWatermarkHelper.WatermarkText="Username"
+				 controls:TextBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Edge_UserCredentials_Username}"
 				 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
 				 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=Username, Type={x:Type viewModel:EdgeCredentialsViewModel}}"
 				 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
@@ -95,26 +91,26 @@
 				 Margin="24 8" 
 				 VerticalAlignment="Top"/>
 
-		<PasswordBox Grid.Row="3"
+		<PasswordBox Grid.Row="5"
 					 Grid.ColumnSpan="2"
 					 x:Name="userPwBox"
 					 PasswordChanged="UserPassword_Changed"
 					 Style="{StaticResource WatermarkPasswordBox}"
-					 controls:PasswordBoxWatermarkHelper.WatermarkText="Password"
+					 controls:PasswordBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Edge_UserCredentials_Password}"
 					 Visibility="{Binding IsCredentialsSelected, Converter={StaticResource BooleanToVisibilityConverter}}" 
 					 Margin="24 0 24 16"/>
 
-		<PasswordBox Grid.Row="2"
+		<PasswordBox Grid.Row="6"
 					 Grid.ColumnSpan="2"
 					 x:Name="apiKeyBox"
 					 PasswordChanged="ApiKey_Changed"
 					 Style="{StaticResource WatermarkPasswordBox}"
-					 controls:PasswordBoxWatermarkHelper.WatermarkText="API Key"
+					 controls:PasswordBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Edge_APIKey}"
 					 Visibility="{Binding IsApiKeySelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 					 Margin="24 0 24 16" />
 
-		<Button Grid.Row="4"
-				Content="Sign in"
+		<Button Grid.Row="7"
+				Content="{x:Static root:PluginResources.Auth_SignIn}"
 				Command="{Binding SignInCommand}"
 				Style="{StaticResource Sdl.Button.PrimaryStyle}"
 				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
