--- a/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
@@ -22,12 +22,13 @@
 
 			<converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 			<converters:EmptyStringToVisibilityConverter x:Key="EmptyStringToVisibilityConverter" />
-
+			<converters:RadioButtonCheckedConverter x:Key="RadioButtonCheckedConverter" />
 		</ResourceDictionary>
 	</UserControl.Resources>
 
 	<Grid>
 		<Grid.RowDefinitions>
+			<RowDefinition Height="*" />
 			<RowDefinition Height="*" />
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="*" />
@@ -39,7 +40,25 @@
 			<ColumnDefinition Width="4*" />
 		</Grid.ColumnDefinitions>
 
-		<StackPanel Grid.Row="0"
+		<StackPanel Orientation="Horizontal"
+					HorizontalAlignment="Center"
+					Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+					Grid.ColumnSpan="2">
+			<TextBlock Text="Select your account region " 
+					   VerticalAlignment="Center"/>
+			<RadioButton Content="EU"
+						 Margin="2"
+						 Padding="0"
+						 VerticalContentAlignment="Center"
+						 IsChecked="{Binding SelectedRegion, ConverterParameter={x:Static root:Constants.CloudEUUrl}, Converter={StaticResource RadioButtonCheckedConverter}}" />
+			<RadioButton Content="US"
+						 Margin="2"
+						 Padding="0"
+						 VerticalContentAlignment="Center"
+						 IsChecked="{Binding SelectedRegion, ConverterParameter={x:Static root:Constants.CloudUSUrl}, Converter={StaticResource RadioButtonCheckedConverter}}" />
+		</StackPanel>
+
+		<StackPanel Grid.Row="1"
 					Grid.ColumnSpan="2"
 					Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}">
 
@@ -66,7 +85,7 @@
 					Margin="0 8" />
 		</StackPanel>
 
-		<Grid Grid.Row="1"
+		<Grid Grid.Row="2"
 			  Grid.ColumnSpan="2"
 			  Margin="24 0">
 			<Grid.RowDefinitions>
@@ -196,7 +215,7 @@
 			<!-- Client Secret -->
 		</Grid>
 
-		<Button Grid.Row="2"
+		<Button Grid.Row="3"
 				Grid.ColumnSpan="2"
 				Content="{x:Static root:PluginResources.Auth_SignIn}"
 				Command="{Binding SignInCommand}"
