--- a/LanguageWeaverProvider/View/CredentialsMainView.xaml
+++ b/LanguageWeaverProvider/View/CredentialsMainView.xaml
@@ -185,13 +185,23 @@
 								Margin="0 8" />
 
 						<Button Content="{x:Static root:PluginResources.MainView_Buttons_LWEdge}"
-								ToolTip="{x:Static root:PluginResources.MainView_Buttons_LWEdge_ToolTip}"
 								Style="{StaticResource Sdl.Button.PrimaryStyle}"
 								Command="{Binding SelectLanguageWeaverServiceCommand}"
 								CommandParameter="{x:Static root:Constants.EdgeService}"
 								Cursor="Hand"
 								Width="200"
-								Margin="0 8" />
+								Margin="0 8">
+							<Button.ToolTip>
+								<ToolTip HorizontalOffset="260"
+										 VerticalOffset="-24">
+									<ToolTip.Content>
+										<TextBlock Text="{x:Static root:PluginResources.MainView_Buttons_LWEdge_ToolTip}"
+												   TextWrapping="Wrap"
+												   MaxWidth="240" />
+									</ToolTip.Content>
+								</ToolTip>
+							</Button.ToolTip>
+						</Button>
 
 						<Button Content="{x:Static root:PluginResources.MainView_Buttons_Exit}"
 								Command="{Binding CloseCommand}"
